self-host/fixtures/invalid/nth-on-nonvec.bclj
#lang beagle/clj
(ns nth-on-nonvec.test)

;; nth's first arg is (Vec A); a scalar (Keyword) is rejected by both compilers.
(defn run [] :- Any
  (nth :not-a-vector 0))
